--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^3.2.2",
     "framer-motion": "^12.4.10",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
