--- a/package.json
+++ b/package.json
@@ -1,47 +1,25 @@
 {
-  "name": "vamsi-cheruku",
-  "version": "0.1.0",
+  "name": "vamsi-cheruku-portfolio",
+  "version": "2.0.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "animejs": "^3.2.2",
-    "framer-motion": "^12.4.10",
-    "lottie-react": "^2.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "next": "^14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "framer-motion": "^10.16.0",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.17"
+    "eslint": "^8",
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.0.1"
   }
 }
