--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
   "name": "vamsi-cheruku-portfolio",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "analyze": "ANALYZE=true npm run build",
+    "lighthouse": "lhci autorun"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "framer-motion": "^10.16.0",
-    "react-icons": "^4.11.0"
+    "framer-motion": "^11.0.0",
+    "next": "^15.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.0"
   },
   "devDependencies": {
+    "@lhci/cli": "^0.12.0",
+    "@next/bundle-analyzer": "^15.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^30.0.0",
+    "autoprefixer": "^10.4.16",
+    "babel-jest": "^30.1.2",
     "eslint": "^8",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "^15.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.0.1"
+    "tailwindcss": "^3.4.0"
   }
 }
